--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,11 @@
   },
   "homepage": "https://github.com/yxlmoona/express-mongo-starter#readme",
   "dependencies": {
+    "bcrypt": "^4.0.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.2"
   }
