pushing to heroku

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGODBURI=mongodb://localhost:27017/ohmycrud
+MONGODBURI=mongodb://<dbuser>:<dbpassword>@ds145304.mlab.com:45304/heroku_sw3cj3jx
 SECRET=FeedMeSeymour
